# raytracing-rust

./: .gitignore  Cargo.toml  README.md  download_res.sh  error.md  workinglightsampling.diff
crates/gui/: Cargo.toml
crates/gui/src/: gui.rs  lib.rs
crates/implementations/: Cargo.toml
crates/implementations/src/: camera.rs  lib.rs  sky.rs
crates/implementations/src/acceleration/: mod.rs  split.rs
crates/implementations/src/integrators/: mis.rs  mod.rs
crates/implementations/src/materials/: emissive.rs  lambertian.rs  reflect.rs  refract.rs  trowbridge_reitz.rs
crates/implementations/src/primitives/: mod.rs  sphere.rs  triangle.rs
crates/implementations/src/samplers/: mod.rs  random_sampler.rs
crates/implementations/src/statistics/: integrators.rs  mod.rs  spherical_sampling.rs
crates/implementations/src/statistics/bxdfs/: lambertian.rs  mod.rs  trowbridge_reitz.rs  trowbridge_reitz_vndf.rs
crates/implementations/src/textures/: mod.rs
crates/implementations/src/utility/: coord.rs  mod.rs
crates/implementations/tests/: sampling.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs  materials.rs  meshes.rs  misc.rs  obj.rs  parser.rs  primitives.rs  textures.rs
crates/output/: Cargo.toml
crates/output/src/: lib.rs
crates/region/: Cargo.toml
crates/region/src/: lib.rs  wrappers.rs
crates/rt_core/: Cargo.toml
crates/rt_core/src/: acceleration.rs  lib.rs  ray.rs  sampler.rs  vec.rs
examples/cli_frontend/: generate.rs  main.rs  parameters.rs  utility.rs
examples/vulkano_frontend/: gui.rs  main.rs  rendering.rs
frontend/: Cargo.toml
frontend/loader/: Cargo.toml
frontend/loader/src/: lib.rs  materials.rs  parser.rs  primitives.rs  textures.rs
frontend/region/: Cargo.toml
frontend/scene/: Cargo.toml
frontend/scene/src/: lib.rs
frontend/scene/src/parse/: acceleration_structures.rs  camera.rs  materials.rs  mod.rs  primitives.rs  scenes.rs  sky.rs  textures.rs
frontend/src/: generate.rs  gui.rs  load_model.rs  macros.rs  main.rs  parameters.rs  rendering.rs  scene.rs  utility.rs
implementations/: Cargo.toml
implementations/proc/: Cargo.toml
implementations/proc/src/: lib.rs
implementations/src/: lib.rs
implementations/src/acceleration/: aabb.rs  mod.rs  split.rs
implementations/src/cameras/: mod.rs
implementations/src/materials/: cook_torrence.rs  emissive.rs  lambertain.rs  lambertian.rs  mod.rs  phong.rs  reflect.rs  refract.rs  trowbridge_reitz.rs
implementations/src/primitives/: aacubiod.rs  aarect.rs  cubiod.rs  mod.rs  rect.rs  sphere.rs  triangle.rs
implementations/src/samplers/: mod.rs  random_sampler.rs
implementations/src/statistics/: Cargo.toml  bxdfs.rs  chi_squared.rs  distributions.rs  spherical_sampling.rs
implementations/src/statistics/bxdfs/: mod.rs  trowbridge_reitz.rs  trowbridge_reitz_vndf.rs
implementations/src/statistics/src/: bxdfs.rs  chi_squared.rs  distributions.rs  integrators.rs  lib.rs
implementations/src/textures/: mod.rs
implementations/src/utility/: coord.rs  distribution.rs  mod.rs
implementations/statistics/: Cargo.toml
implementations/statistics/src/: bxdfs.rs  chi_squared.rs  distributions.rs  integrators.rs  lib.rs  spherical_sampling.rs
implementations/tests/: bxdf.rs  sampling.rs
implementations/tests/common/: int.rs  mod.rs
rt_core/: Cargo.toml
rt_core/src/: acceleration.rs  lib.rs  material.rs  primitive.rs  ray.rs  sampler.rs  vec.rs
scenes/: overshadowed.ssml  rtweekend1.ssml  scene.ssml
src/: gui.rs  lib.rs  load_model.rs  main.rs  math.rs  parameters.rs  scene.rs  utility.rs
src/acceleration/: aabb.rs  bvh.rs  mod.rs  split.rs
src/bvh/: aabb.rs  bvh.rs  mod.rs  split.rs
src/image/: aabb.rs  bvh.rs  camera.rs  generate.rs  hittables.rs  macros.rs  material.rs  math.rs  mod.rs  parameters.rs  ray.rs  scene.rs  sky.rs  texture.rs  tracing.rs
src/ray_tracing/: load_model.rs  material.rs  mod.rs  primitives.rs  ray.rs  sky.rs  texture.rs  tracing.rs
src/ray_tracing/intersection/: aacuboid.rs  aarect.rs  cuboid.rs  mod.rs  rect.rs  sphere.rs  triangle.rs
src/ray_tracing/material/: cook_torrence.rs  lambertian.rs  mod.rs
src/utility/: coord.rs  interval.rs  interval_vec.rs  math.rs  mod.rs  vec.rs
utility/: Cargo.toml
utility/src/: generate.rs  lib.rs  parameters.rs
