[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]

[dependencies]
rayon = "1.5.1"
rand = { version = "0.8.3", features = [ "small_rng" ] }
rand_seeder = "0.2.2"
implementations = { path = "./crates/implementations" }
vulkano = { version = "0.28.0", optional = true }
vulkano-shaders = { version = "0.28.0", optional = true }
vulkano-win = { version = "0.28.0", optional = true }
wavefront_obj = "10.0.0"
winit = { version = "0.26.1", optional = true }
region = { path = "./crates/region" }
loader = { path = "./crates/loader" }
output = { path = "./crates/output" }
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
gui = { path = "./crates/gui" }
indicatif = "0.17.3"

[features]
f64 = ["implementations/f64"]
gui = ["dep:vulkano", "dep:vulkano-win", "dep:vulkano-shaders", "dep:winit"]
