[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["crates/*"]

[dependencies]
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
gui = { path = "./crates/gui", optional = true }
implementations = { path = "./crates/implementations" }
indicatif = "0.17.3"
loader = { path = "./crates/loader" }
output = { path = "./crates/output" }
rand = { version = "0.8.3", features = [ "small_rng" ] }
rand_seeder = "0.2.2"
rayon = "1.5.1"
region = { path = "./crates/region" }
vulkano = { version = "0.28.0", optional = true }
vulkano-shaders = { version = "0.28.0", optional = true }
vulkano-win = { version = "0.28.0", optional = true }
winit = { version = "0.26.1", optional = true }

[features]
f64 = ["implementations/f64"]
gui = ["dep:vulkano", "dep:vulkano-win", "dep:vulkano-shaders", "dep:winit", "dep:gui"]
