[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
image = "0.23.14"
implementations = {path = "../implementations"}
rand = { version = "0.8.3", features = [ "small_rng" ] }
rand_seeder = "0.2.2"
rt_core = {path = "../rt_core"}
vulkano = "0.28.0"
vulkano-win = "0.28.0"
vulkano-shaders = "0.28.0"
winit = "0.26.1"