[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
image = "0.23.14"
implementations = {path = "../implementations"}
rand = { version = "0.8.3", features = [ "small_rng" ] }
rand_seeder = "0.2.2"
rt_core = { path = "../rt_core" }
vulkano = { version = "0.28.0", optional = true }
vulkano-win = { version = "0.28.0", optional = true }
vulkano-shaders = { version = "0.28.0", optional = true }
wavefront_obj = "10.0.0"
winit = { version = "0.26.1", optional = true }

[features]
f64 = ["implementations/f64", "rt_core/f64"]
gui = ["dep:vulkano", "dep:vulkano-win", "dep:vulkano-shaders", "dep:winit"]