[package]
name = "implementations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
proc = {path = "./proc"}
rand = { version = "0.8.3", features = [ "small_rng" ] }
rayon = "1.5.1"
rt_core = {path = "../rt_core"}