[package]
name = "utility"
version = "0.1.0"
authors = ["NonL4331 <nicholasl0003@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
image = "0.23.14"
cpu_raytracer = { path = "../"}
rand = { version = "0.8.3", features = [ "small_rng" ] }
rand_seeder = "0.2.2"