[package]
name = "scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
implementations = {path = "../../implementations"}
rt_core = { path = "../../rt_core" }
toml = "0.5.10"
wavefront_obj = "10.0.0"

[features]
f64 = ["implementations/f64", "rt_core/f64"]