[package]
name = "scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
serde = { version = "1.0", features = [ "derive" ] }
implementations = { path = "../../implementations" }
toml = "0.5.10"
wavefront_obj = "10.0.0"
ouroboros = "0.15.5"
bumpalo = "3.12.0"

[features]
f64 = ["implementations/f64"]