[package]
name = "statistics"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.3"
num_cpus = "1.15"
statrs = "0.16.0"
rayon = "1.5.1"
rt_core = { path = "../../rt_core" }

[dev-dependencies]
image = "0.24.5"
num_cpus = "1.15"
statrs = "0.16.0"
rand_core = "0.6.0"
rayon = "1.5.1"
rand = { version = "0.8.3", features = [ "small_rng" ] }

[features]
f64 = ["rt_core/f64"]